k8s/property-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: property-service
  name: property-service
spec:
  type: ClusterIP
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: property-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: property-service
  name: property-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: property-service
  template:
    metadata:
      labels:
        app: property-service
    spec:
      containers:
        - image: nicholaspat/property-service
          name: property-service
          ports:
            - containerPort: 8081
      restartPolicy: Always
