k8s/reservation-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reservation-service
  name: reservation-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: reservation-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reservation-service
  name: reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - image: nicholaspat/reservation-service
          name: reservation-service
          ports:
            - containerPort: 8083
      restartPolicy: Always
