k8s/user-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service
spec:
#  type: LoadBalancer
  type: NodePort
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
#      protocol: TCP
  selector:
    app: user-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - image: nicholaspat/user-service
          name: user-service
          ports:
            - containerPort: 8084
      restartPolicy: Always
