k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
#        - path: /properties
#          pathType: ImplementationSpecific
#          backend:
#            service:
#              name: property-service
#              port:
#                number: 8081
#        - path: /countries
#          pathType: ImplementationSpecific
#          backend:
#            service:
#              name: property-service
#              port:
#                number: 8081
        - path: /users
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-service
              port:
                number: 8082
        - path: /reservations/*
          pathType: ImplementationSpecific
          backend:
            service:
              name: reservation-service
              port:
                number: 8083
